# extreme-temperatures

./: .gitignore  README.md  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: backfill.yml  ci.yml  nightly-ingest.yml
backend/: Dockerfile  README.md  pyproject.toml  start.sh
backend/src/extreme_temps/: cli.py  config.py
backend/src/extreme_temps/api/: app.py  deps.py  schemas.py
backend/src/extreme_temps/api/routers/: insights.py  latest_insights.py  manage.py  rankings.py  records.py  series.py  stations.py
backend/src/extreme_temps/compute/: climatology.py  latest_insights.py  rankings.py  records.py  rolling_windows.py  severity.py  statements.py
backend/src/extreme_temps/db/: connection.py  queries.py  schema.py
backend/src/extreme_temps/ingest/: ghcn_daily.py  gsod.py  open_meteo.py  orchestrator.py  stations.py
backend/tests/: conftest.py
backend/tests/test_api/: test_endpoints.py
backend/tests/test_compute/: test_climatology.py  test_latest_insights.py  test_rankings.py  test_rolling_windows.py  test_severity.py  test_statements.py
backend/tests/test_db/: test_queries.py  test_schema.py
backend/tests/test_ingest/: test_ghcn_daily.py  test_open_meteo.py  test_orchestrator.py
data/: README.md  stations.json
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: DistributionCurve.tsx  ExtremesRankingTable.tsx  (+7 more)
notebooks/: extreme_temperatures.marimo.py
scripts/: backfill.py  seed_stations.py
src/weather_fetcher/: __init__.py  cli.py  config.py  fetcher.py  ghcn_daily.py  scraper.py
(+4 files in other folders)
